# AlgoVisualizer

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  Bar.hpp  SortAlgorithms.hpp  Sorter.hpp  Utils.hpp  config.hpp
include/Algorithms/: Algorithms.hpp  BubbleSort.hpp  MergeSort.hpp  QuickSort.hpp  SortAlgorithm.hpp
src/: App.cpp  Bar.cpp  SortAlgorithms.cpp  Sorter.cpp  Utils.cpp  main.cpp  mainold.cpp
src/Algorithms/: BubbleSort.cpp  MergeSort.cpp  QuickSort.cpp  SortAlgorithm.cpp
